<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.studentregistration.ui.home.Home"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_rate"
        android:name="com.example.studentregistration.ui.rate.Rate"
        android:label="@string/rate"
        tools:layout="@layout/fragment_rate" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.studentregistration.ui.about_us.About"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.studentregistration.ui.feedback.Feedback"
        android:label="@string/feedback"
        tools:layout="@layout/fragment_feedback" />
</navigation>