<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ExitStudent.ExitRegistration"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/rublogo"
                    android:layout_width="87dp"
                    android:layout_height="104dp"
                    android:src="@drawable/rublogo" />

                <TextView
                    android:id="@+id/cst"
                    android:layout_width="0dp"
                    android:layout_height="97dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cst"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/cstlogo"
                    android:layout_width="87dp"
                    android:layout_height="104dp"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/regisForm"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/spring"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/springSem" />

                <RadioButton
                    android:id="@+id/autumn"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/autumnSem" />
            </LinearLayout>

            <EditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:inputType="date"
                android:minHeight="48dp"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/cid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cid"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </LinearLayout>

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                android:inputType="date"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/reg_phoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/pname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pname"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/Mparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pnumber"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/email_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eparent"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/address_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cparent"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/programme"
                android:layout_width="200dp"
                android:layout_height="40dp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

            </Spinner>

            <Spinner
                android:id="@+id/yearOfStudy"
                android:layout_width="200dp"
                android:layout_height="40dp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/SE"
                android:layout_width="200dp"
                android:layout_height="40dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="List all the Repeat module"
                android:textColor="#0E0D0D"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/format"
                android:textColor="#0B0707" />

            <EditText
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/module"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="154dp"
                android:layout_height="53dp"
                android:layout_marginTop="20dp"
                android:text="Submit" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


