<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/zeroTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/ourApp"
            android:textColor="#2196F3"
            android:textSize="20sp" />


        <TextView android:id="@+id/secondTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text2"
            android:layout_gravity="center"/>

        <TextView android:id="@+id/thirdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text1"
            android:layout_gravity="center"/>

        <TextView android:id="@+id/sixTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text1"
            android:layout_gravity="center"/>

        <TextView android:id="@+id/sevenTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text2"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/eightTxt"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/Contact"
            />
        <TextView android:id="@+id/nineTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cont"
            android:layout_gravity="center"/>


    </LinearLayout>
</ScrollView>